--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "node server.js",
+    "server" : "nodemon server.js",
+    "start-client" : "npm start --prefix client",
+    "develop" : "concurrently -n 'server,client' -c 'red,yellow' \"npm run server\" \"npm run start-client\""
   },
   "keywords": [],
   "author": "",
