--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "start": "node server.js",
     "server" : "nodemon server.js",
     "start-client" : "npm start --prefix client",
-    "develop" : "concurrently -n 'server,client' -c 'red,yellow' \"npm run server\" \"npm run start-client\""
+    "develop" : "concurrently -n 'server,client' -c 'red,yellow' \"npm run server\" \"npm run start-client\"",
+    "heroku-postbuild":"npm install  --prefix client && npm run build  --prefix client"
   },
   "keywords": [],
   "author": "",
